tests/programs/invalid/bitshift.java
public class bitshift {
  public int m(int x) {
    return ((x << 2) >> 3) >>> 4;
  }
}   